--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
   max-width: 100%;
 }
 .container {
-  max-width: 288px;
+  max-width: 320px;
   margin: 0 auto;
   padding: 0 16px;
 }
@@ -296,8 +296,11 @@ img {
   font-size: 36px;
   margin-bottom: 8px;
   text-align: center;
+  font-weight: 700;
 }
-
+.about-us-section-item-text {
+  font-weight: 500;
+}
 .about-us-section-icon {
   display: flex;
   display: none;
@@ -330,6 +333,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
+  justify-content: center;
 }
 .our-team-section-item {
   background-color: #ffffff;
@@ -441,9 +445,9 @@ img {
   background: #2e2f42;
   padding: 100px 0;
 }
-.footer-wrap {
+/* .footer-wrap {
   align-items: baseline;
-}
+} */
 .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -799,6 +803,7 @@ img {
   .header .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
   .header-nav-item {
     padding: 24px 0;
@@ -833,7 +838,6 @@ img {
     font-style: normal;
   }
   .header-contacts-items {
-    padding: 24px 0;
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -906,14 +910,15 @@ img {
     align-self: stretch;
   }
   .our-team-section {
-    padding: 120px 92px;
+    padding: 120px 0;
   }
   .our-team-section-items {
     display: flex;
     gap: 64px 24px;
+    widows: 100%;
+    justify-content: center;
   }
   .our-team-section-item {
-    width: calc((100% - 24px) / 2);
   }
   .our-portfolio-section-items {
     gap: 72px 24px;
@@ -1040,6 +1045,10 @@ img {
   .about-us-section-item-title {
     font-size: 20px;
     margin-bottom: 8px;
+    font-weight: 500;
+  }
+  .about-us-section-item-text {
+    font-weight: 400;
   }
   .about-us-section-icon {
     display: flex;
@@ -1079,6 +1088,9 @@ img {
     align-items: baseline;
     gap: 0;
   }
+  .footer-socials-part {
+    margin: 0 80px 0 120px;
+  
   .footer-logo-part {
     margin-right: 120px;
   }
@@ -1096,7 +1108,7 @@ img {
 
   .footer-form-part {
     margin-left: 80px;
-  }
+  } 
   .footer-form-part-title {
     text-align: left;
   }
